@@ -58,6 +58,7 @@
     "synergyc",
     "synergyd",
     "synergys",
+    "unittests",
     "Valgrind",
     "vcpkg",
     "Volker",
