@@ -44,7 +44,7 @@ public:
       int mouseScrollDelta, IEventQueue *events,
       synergy::ClientScrollDirection m_clientScrollDirection =
           synergy::ClientScrollDirection::SERVER);
-  virtual ~XWindowsScreen();
+  virtual ~XWindowsScreen() override;
 
   //! @name manipulators
   //@{
@@ -52,50 +52,50 @@ public:
   //@}
 
   // IScreen overrides
-  virtual void *getEventTarget() const;
-  virtual bool getClipboard(ClipboardID id, IClipboard *) const;
-  virtual void
-  getShape(SInt32 &x, SInt32 &y, SInt32 &width, SInt32 &height) const;
-  virtual void getCursorPos(SInt32 &x, SInt32 &y) const;
+  void *getEventTarget() const override;
+  bool getClipboard(ClipboardID id, IClipboard *) const override;
+  void
+  getShape(SInt32 &x, SInt32 &y, SInt32 &width, SInt32 &height) const override;
+  void getCursorPos(SInt32 &x, SInt32 &y) const override;
 
   // IPrimaryScreen overrides
-  virtual void reconfigure(UInt32 activeSides);
-  virtual void warpCursor(SInt32 x, SInt32 y);
-  virtual UInt32 registerHotKey(KeyID key, KeyModifierMask mask);
-  virtual void unregisterHotKey(UInt32 id);
-  virtual void fakeInputBegin();
-  virtual void fakeInputEnd();
-  virtual SInt32 getJumpZoneSize() const;
-  virtual bool isAnyMouseButtonDown(UInt32 &buttonID) const;
-  virtual void getCursorCenter(SInt32 &x, SInt32 &y) const;
+  void reconfigure(UInt32 activeSides) override;
+  void warpCursor(SInt32 x, SInt32 y) override;
+  UInt32 registerHotKey(KeyID key, KeyModifierMask mask) override;
+  void unregisterHotKey(UInt32 id) override;
+  void fakeInputBegin() override;
+  void fakeInputEnd() override;
+  SInt32 getJumpZoneSize() const override;
+  bool isAnyMouseButtonDown(UInt32 &buttonID) const override;
+  void getCursorCenter(SInt32 &x, SInt32 &y) const override;
 
   // ISecondaryScreen overrides
-  virtual void fakeMouseButton(ButtonID id, bool press);
-  virtual void fakeMouseMove(SInt32 x, SInt32 y);
-  virtual void fakeMouseRelativeMove(SInt32 dx, SInt32 dy) const;
-  virtual void fakeMouseWheel(SInt32 xDelta, SInt32 yDelta) const;
+  void fakeMouseButton(ButtonID id, bool press) override;
+  void fakeMouseMove(SInt32 x, SInt32 y) override;
+  void fakeMouseRelativeMove(SInt32 dx, SInt32 dy) const override;
+  void fakeMouseWheel(SInt32 xDelta, SInt32 yDelta) const override;
 
   // IPlatformScreen overrides
-  virtual void enable();
-  virtual void disable();
-  virtual void enter();
-  virtual bool leave();
-  virtual bool setClipboard(ClipboardID, const IClipboard *);
-  virtual void checkClipboards();
-  virtual void openScreensaver(bool notify);
-  virtual void closeScreensaver();
-  virtual void screensaver(bool activate);
-  virtual void resetOptions();
-  virtual void setOptions(const OptionsList &options);
-  virtual void setSequenceNumber(UInt32);
-  virtual bool isPrimary() const;
+  void enable() override;
+  void disable() override;
+  void enter() override;
+  bool leave() override;
+  bool setClipboard(ClipboardID, const IClipboard *) override;
+  void checkClipboards() override;
+  void openScreensaver(bool notify) override;
+  void closeScreensaver() override;
+  void screensaver(bool activate) override;
+  void resetOptions() override;
+  void setOptions(const OptionsList &options) override;
+  void setSequenceNumber(UInt32) override;
+  bool isPrimary() const override;
   String getSecureInputApp() const override;
 
 protected:
   // IPlatformScreen overrides
-  virtual void handleSystemEvent(const Event &, void *);
-  virtual void updateButtons();
-  virtual IKeyState *getKeyState() const;
+  void handleSystemEvent(const Event &, void *) override;
+  void updateButtons() override;
+  IKeyState *getKeyState() const override;
 
 private:
   // event sending
